--- a/.env
+++ b/.env
@@ -22,6 +22,9 @@ SECRET_KEY=changethis
 FIRST_SUPERUSER=admin@example.com
 FIRST_SUPERUSER_PASSWORD=changethis
 
+# Supabase Database (overrides Postgres config below)
+DATABASE_URL=postgresql://postgres:superbase@12345@db.qeiwrrmzonkbgqteqkmh.supabase.co:5432/postgres
+
 # Emails
 SMTP_HOST=
 SMTP_USER=
